Added automated numbers on the first status bar

--- a/data/report_templates/project_progress.html
+++ b/data/report_templates/project_progress.html
@@ -115,7 +115,7 @@
         <a class="card_collapse_link" data-bs-toggle="collapse" data-bs-target="#reception_control_card_body" role="button" aria-expanded="false" aria-controls="#reception_control_card_body">
           <h3>Reception Control</h3>
           <div class="progress">
-            <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">200/200</div>
+            <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">{{ meta['RC_passed'] }}/{{ meta['nr_samples'] }}</div>
           </div>
         </a>
 
